---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Now supports any kind of fuel, which includes things like mining drills from Pyanodon's and others. Might reset some of the fuels you selected to their default. I'm sorry about this, I tried to migrate it where I could, but there were large background changes that made it so it doesn't work in every case.
  Changes:
    - 
  Bugfixes:
    - 

---------------------------------------------------------------------------------------------------
Version: 0.18.26
Date: 03. 06. 2020
  Bugfixes:
    - Fixed a bug where mining fluid calculations were off by a factor of 10
    - Fixed that you could define a fluid-product amount by belts, which is nonsensical
    - Fixed some minor graphical inconsistencies

---------------------------------------------------------------------------------------------------
Version: 0.18.25
Date: 02. 06. 2020
  Bugfixes:
    - Fixed a crash when changing a machine through a popup-dialog
    - Fixed a series of crashes related to loading a save

---------------------------------------------------------------------------------------------------
Version: 0.18.24
Date: 01. 06. 2020
  Changes:
    - This update contains an unusually large amount of background changes, so there might be some instability (ie. crashes) for a day or two, until I can sort them all out
  Bugfixes:
    - Fixed a crash on load in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 0.18.23
Date: 30. 05. 2020
  Changes:
    - Added support for any modded rocket silo recipes, instead of only vanilla space science